--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/style.css">
   <title>YOHAN & GAYOUNG</title>
 </head>
 <body>
-  
+  <header class='header'>
+    <div>
+      <h2>YOHAN & GA YOUNG</h2>
+      <h2>2019년 9월 29일 일요일 12시</h2>
+    </div>
+  </header>
+  <div class="header">
+    <img src='./assets/yohan_gayoung.jpeg' />
+  </div>
 </body>
 </html>
