--- a/index.html
+++ b/index.html
@@ -5,17 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Do+Hyeon&display=swap" rel="stylesheet">
   <title>YOHAN & GAYOUNG</title>
 </head>
 <body>
   <header class='header'>
     <div>
-      <h2>YOHAN & GA YOUNG</h2>
-      <h2>2019년 9월 29일 일요일 12시</h2>
+      <h1>저희 결혼 합니다!</h1>
+      <h2>YOHAN & GAYOUNG</h2>
+      <h1>2019년 9월 29일 일요일 12시</h1>
+      <img src='./assets/tovhesed.jpg' />
     </div>
   </header>
   <div class="header">
     <img src='./assets/yohan_gayoung.jpeg' />
+  </div>
+  <div class="section">
+    <p>
+      내 전부를 주어도 아깝지 않은 사람을 만나, <br>
+      믿음과 사랑으로 하나되어<br>
+      삶의 여행을 함께 떠나려 합니다.<br>
+      저희 여행의 출발점에 여러분을 초대하오니<br>
+      함꼐 자리하시어 축복해 주시기 바랍니다.
+    </p>
+  </div>
+  <div>
+
   </div>
 </body>
 </html>
