--- a/index.html
+++ b/index.html
@@ -9,28 +9,30 @@
   <title>YOHAN & GAYOUNG</title>
 </head>
 <body>
-  <header class='header'>
-    <div>
-      <h1>저희 결혼 합니다!</h1>
-      <h2>YOHAN & GAYOUNG</h2>
-      <h1>2019년 9월 29일 일요일 12시</h1>
-      <img src='./assets/tovhesed.jpg' />
+  <header class="header">
+    <div class="header_img">
+      <p>09.29</p>
+    </div>
+    <div class="header_wedding_date">
+      <span>이요한 & 이가영</span>
+      <span>2019. 09. 29(일) 12:00PM</span>
+      <span>토브헤세드</span>
     </div>
   </header>
-  <div class="header">
-    <img src='./assets/yohan_gayoung.jpeg' />
-  </div>
-  <div class="section">
-    <p>
-      내 전부를 주어도 아깝지 않은 사람을 만나, <br>
-      믿음과 사랑으로 하나되어<br>
-      삶의 여행을 함께 떠나려 합니다.<br>
-      저희 여행의 출발점에 여러분을 초대하오니<br>
-      함꼐 자리하시어 축복해 주시기 바랍니다.
-    </p>
-  </div>
-  <div>
-
-  </div>
+  <section>
+    <div class="wedding_description">
+      <p>
+        내 전부를 주어도 아깝지 않은 사람을 만나<br>
+        믿음과 사랑으로 하나되어<br>
+        삶의 여행을 함께 떠나려 합니다.<br>
+        저희 여행의 출발점에 여러분을 초대하오니<br>
+        함꼐 자리하시어 축복해 주시기 바랍니다.
+      </p>
+    </div>
+    <div class="wedding_parent">
+      <p>(故)이가선, 차정자 의 아들 요한</p>
+      <p>이용희, 김미경 의 딸 가영</p>
+    </div>
+  </section>
 </body>
 </html>
