add photo gallery

--- a/index.html
+++ b/index.html
@@ -34,5 +34,29 @@
       <p>이용희, 김미경 의 딸 가영</p>
     </div>
   </section>
+  <article>
+    <div class="photo_title">사진 갤러리</div>
+    <div class="row"> 
+      <div class="column">
+        <img src="./assets/1.jpg">
+        <img src="./assets/4.jpg">
+        <img src="./assets/7.jpg">
+        <img src="./assets/10.jpg">
+      </div>
+      <div class="column">
+        <img src="./assets/2.jpg">
+        <img src="./assets/5.jpg">
+        <img src="./assets/8.jpg">
+        <img src="./assets/11.jpg">
+        <img src="./assets/12.jpg">
+      </div> 
+      <div class="column">
+        <img src="./assets/3.jpg">
+        <img src="./assets/6.jpg">
+        <img src="./assets/9.jpg">
+        <img src="./assets/13.jpg">
+      </div>
+    </div>
+  </article>
 </body>
 </html>
