--- a/index.html
+++ b/index.html
@@ -20,43 +20,50 @@
     </div>
   </header>
   <section>
-    <div class="wedding_description">
-      <p>
-        내 전부를 주어도 아깝지 않은 사람을 만나<br>
-        믿음과 사랑으로 하나되어<br>
-        삶의 여행을 함께 떠나려 합니다.<br>
-        저희 여행의 출발점에 여러분을 초대하오니<br>
-        함꼐 자리하시어 축복해 주시기 바랍니다.
-      </p>
-    </div>
-    <div class="wedding_parent">
-      <p>(故)이가선, 차정자 의 아들 요한</p>
-      <p>이용희, 김미경 의 딸 가영</p>
-    </div>
+    <article>
+      <div class="wedding_description">
+          <p>
+            내 전부를 주어도 아깝지 않은 사람을 만나<br>
+            믿음과 사랑으로 하나되어<br>
+            삶의 여행을 함께 떠나려 합니다.<br>
+            저희 여행의 출발점에 여러분을 초대하오니<br>
+            함꼐 자리하시어 축복해 주시기 바랍니다.
+          </p>
+        </div>
+        <div class="wedding_parent">
+          <p>(故)이가선, 차정자 의 아들 요한</p>
+          <p>이용희, 김미경 의 딸 가영</p>
+        </div>
+    </article>  
+    <article>
+      <div class="photo_title">사진 갤러리</div>
+        <div class="row"> 
+          <div class="column">
+            <img src="./assets/1.jpeg" id="img_1">
+            <div id="modal" class="modal_1">
+              <span class="close_img">&times;</span>
+              <img class="modal-content" id="modal_inner_img" />
+            </div>
+            <img src="./assets/4.jpeg">
+            <!-- <img src="./assets/7.jpg">
+            <img src="./assets/10.jpg"> -->
+          </div>
+          <div class="column">
+            <img src="./assets/2.jpeg">
+            <img src="./assets/5.jpeg">
+            <!-- <img src="./assets/8.jpg">
+            <img src="./assets/11.jpg">
+            <img src="./assets/12.jpg"> -->
+          </div> 
+          <div class="column">
+            <img src="./assets/3.jpeg">
+            <img src="./assets/6.jpeg">
+            <!-- <img src="./assets/9.jpg">
+            <img src="./assets/13.jpg"> -->
+          </div>
+        </div>
+      </article>
   </section>
-  <article>
-    <div class="photo_title">사진 갤러리</div>
-    <div class="row"> 
-      <div class="column">
-        <img src="./assets/1.jpg">
-        <img src="./assets/4.jpg">
-        <img src="./assets/7.jpg">
-        <img src="./assets/10.jpg">
-      </div>
-      <div class="column">
-        <img src="./assets/2.jpg">
-        <img src="./assets/5.jpg">
-        <img src="./assets/8.jpg">
-        <img src="./assets/11.jpg">
-        <img src="./assets/12.jpg">
-      </div> 
-      <div class="column">
-        <img src="./assets/3.jpg">
-        <img src="./assets/6.jpg">
-        <img src="./assets/9.jpg">
-        <img src="./assets/13.jpg">
-      </div>
-    </div>
-  </article>
+  <script src='./js/modal.js'></script>
 </body>
 </html>
