--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Do+Hyeon&display=swap" rel="stylesheet">
-  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=9c864a36bf5ac46dcc529681b9099d97&libraries=services,clusterer,drawing"></script>
   <title>YOHAN & GAYOUNG</title>
 </head>
 <body>
@@ -87,11 +86,10 @@
       <article>
         <div class="map_title">찾아오시는 길</div>
         <div id="map">
-
+          <iframe src="https://map.kakao.com/?urlX=507236&urlY=1116421&urlLevel=3&itemId=1298988185&q=%ED%86%A0%EB%B8%8C%ED%97%A4%EC%84%B8%EB%93%9C&srcid=1298988185&map_type=TYPE_MAP" width="100%" height="500px" scrolling="auto"></iframe>
         </div>
       </article>
   </section>
   <script src='./js/modal.js'></script>
-  <script src='./js/map.js'></script>
 </body>
 </html>
