--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <dd>간선버스(파랑): 141</dd>
             <dd>직행버스(빨강): 3600</dd>
             <dt>주차</dt>
-            <dd>주차요원의 안내를 받으세요</dd>
+            <dd>발렛주차 - 주차요원의 안내를 받으세요</dd>
             <dd>2시간 무료(교통이 혼잡하오니 가급적 대중교통을 이용하시기 바랍니다)</dd>
           </dl>
         </div>
