--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
   <link rel='stylesheet' href='//fonts.googleapis.com/earlyaccess/kopubbatang.css'>
+  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+  <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+  <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
   <title>YOHAN & GAYOUNG</title>
 </head>
 <body>
@@ -22,23 +25,9 @@
       </p>
       <p>(故)이가선, 차정자 의 아들 요한<br>이용희, 김미경 의 딸 가영</p>
     </div>
-    <!-- <div class="header_wedding_date">
-      <span>이요한 & 이가영</span>
-      <span>2019. 09. 29(일) 12:00PM</span>
-      <span>토브헤세드</span>
-    </div> -->
   </header>
   <section>
     <article>
-      <!-- <div class="wedding_description">
-        <p>
-          내 전부를 주어도 아깝지 않은 사람을 만나<br>
-          믿음과 사랑으로 하나되어<br>
-          삶의 여행을 함께 떠나려 합니다.<br>
-          저희 여행의 출발점에 여러분을 초대하오니<br>
-          함꼐 자리하시어 축복해 주시기 바랍니다.
-        </p>
-      </div> -->
     </article>  
     <article>
       <div class="photo_title">포토 갤러리</div>
@@ -46,15 +35,10 @@
           <div class="column">
             <img src="./assets/1.jpeg" onclick="openImgModal();currentSlide(1)" class="hover-shadow cursor">
             <img src="./assets/4.jpeg" onclick="openImgModal();currentSlide(4)" class="hover-shadow cursor">
-            <!-- <img src="./assets/7.jpg">
-            <img src="./assets/10.jpg"> -->
           </div>
           <div class="column">
             <img src="./assets/2.jpeg" onclick="openImgModal();currentSlide(2)" class="hover-shadow cursor">
             <img src="./assets/5.jpeg" onclick="openImgModal();currentSlide(5)" class="hover-shadow cursor">
-            <!-- <img src="./assets/8.jpg">
-            <img src="./assets/11.jpg">
-            <img src="./assets/12.jpg"> -->
           </div> 
           <div class="column">
             <img src="./assets/3.jpeg" onclick="openImgModal();currentSlide(3)" class="hover-shadow cursor">
