--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
   <link rel='stylesheet' href='//fonts.googleapis.com/earlyaccess/kopubbatang.css'>
-  <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-  <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
   <title>YOHAN & GAYOUNG</title>
 </head>
 <body>
@@ -33,17 +31,19 @@
         <div class="row"> 
           <div class="column">
             <img src="./assets/1.jpeg" onclick="openImgModal();currentSlide(1)" class="hover-shadow cursor">
-            <img src="./assets/4.jpeg" onclick="openImgModal();currentSlide(4)" class="hover-shadow cursor">
+            <img src="./assets/4.jpg" onclick="openImgModal();currentSlide(4)" class="hover-shadow cursor">
+            <img src="./assets/7.jpg" onclick="openImgModal();currentSlide(7)" class="hover-shadow cursor">
           </div>
           <div class="column">
-            <img src="./assets/2.jpeg" onclick="openImgModal();currentSlide(2)" class="hover-shadow cursor">
+            <img src="./assets/2.jpg" onclick="openImgModal();currentSlide(2)" class="hover-shadow cursor">
             <img src="./assets/5.jpeg" onclick="openImgModal();currentSlide(5)" class="hover-shadow cursor">
+            <img src="./assets/8.jpg" onclick="openImgModal();currentSlide(8)" class="hover-shadow cursor">
+            <img src="./assets/11.jpg" onclick="openImgModal();currentSlide(11)" class="hover-shadow cursor">
           </div> 
           <div class="column">
             <img src="./assets/3.jpeg" onclick="openImgModal();currentSlide(3)" class="hover-shadow cursor">
-            <img src="./assets/6.jpeg" onclick="openImgModal();currentSlide(6)" class="hover-shadow cursor">
-            <!-- <img src="./assets/9.jpg">
-            <img src="./assets/13.jpg"> -->
+            <img src="./assets/6.jpg" onclick="openImgModal();currentSlide(6)" class="hover-shadow cursor">
+            <img src="./assets/9.jpg" onclick="openImgModal();currentSlide(9)" class="hover-shadow cursor">
           </div>
         </div>
         <div id="imgModal" class="modal">
@@ -53,19 +53,31 @@
                 <img src="./assets/1.jpeg" style="width:100%">
               </div>
               <div class="slides">
-                <img src="./assets/2.jpeg" style="width:100%">
+                <img src="./assets/2.jpg" style="width:100%">
               </div>
               <div class="slides">
                 <img src="./assets/3.jpeg" style="width:100%">
               </div>
               <div class="slides">
-                <img src="./assets/4.jpeg" style="width:100%">
+                <img src="./assets/4.jpg" style="width:100%">
               </div>
               <div class="slides">
                 <img src="./assets/5.jpeg" style="width:100%">
               </div>
               <div class="slides">
-                <img src="./assets/6.jpeg" style="width:100%">
+                <img src="./assets/6.jpg" style="width:100%">
+              </div>
+              <div class="slides">
+                <img src="./assets/7.jpg" style="width:100%">
+              </div>
+              <div class="slides">
+                <img src="./assets/8.jpg" style="width:100%">
+              </div>
+              <div class="slides">
+                <img src="./assets/9.jpg" style="width:100%">
+              </div>
+              <div class="slides">
+                <img src="./assets/11.jpg" style="width:100%">
               </div>
               <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
               <a class="next" onclick="plusSlides(1)">&#10095;</a>
