--- a/index.html
+++ b/index.html
@@ -33,17 +33,21 @@
             <img src="./assets/1.jpeg" onclick="openImgModal();currentSlide(1)" class="hover-shadow cursor">
             <img src="./assets/4.jpg" onclick="openImgModal();currentSlide(4)" class="hover-shadow cursor">
             <img src="./assets/7.jpg" onclick="openImgModal();currentSlide(7)" class="hover-shadow cursor">
+            <img src="./assets/10.jpg" onclick="openImgModal();currentSlide(10)" class="hover-shadow cursor">
+            <img src="./assets/13.jpg" onclick="openImgModal();currentSlide(13)" class="hover-shadow cursor">
           </div>
           <div class="column">
             <img src="./assets/2.jpg" onclick="openImgModal();currentSlide(2)" class="hover-shadow cursor">
             <img src="./assets/5.jpeg" onclick="openImgModal();currentSlide(5)" class="hover-shadow cursor">
             <img src="./assets/8.jpg" onclick="openImgModal();currentSlide(8)" class="hover-shadow cursor">
-            <img src="./assets/11.jpg" onclick="openImgModal();currentSlide(11)" class="hover-shadow cursor">
+            <img src="./assets/11.jpeg" onclick="openImgModal();currentSlide(11)" class="hover-shadow cursor">
+            <img src="./assets/14.jpeg" onclick="openImgModal();currentSlide(14)" class="hover-shadow cursor">
           </div> 
           <div class="column">
             <img src="./assets/3.jpeg" onclick="openImgModal();currentSlide(3)" class="hover-shadow cursor">
             <img src="./assets/6.jpg" onclick="openImgModal();currentSlide(6)" class="hover-shadow cursor">
             <img src="./assets/9.jpg" onclick="openImgModal();currentSlide(9)" class="hover-shadow cursor">
+            <img src="./assets/12.jpeg" onclick="openImgModal();currentSlide(12)" class="hover-shadow cursor">
           </div>
         </div>
         <div id="imgModal" class="modal">
@@ -77,7 +81,19 @@
                 <img src="./assets/9.jpg" style="width:100%">
               </div>
               <div class="slides">
-                <img src="./assets/11.jpg" style="width:100%">
+                <img src="./assets/10.jpg" style="width:100%">
+              </div>
+              <div class="slides">
+                <img src="./assets/11.jpeg" style="width:100%">
+              </div>
+              <div class="slides">
+                <img src="./assets/12.jpeg" style="width:100%">
+              </div>
+              <div class="slides">
+                <img src="./assets/13.jpg" style="width:100%">
+              </div>
+              <div class="slides">
+                <img src="./assets/14.jpeg" style="width:100%">
               </div>
               <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
               <a class="next" onclick="plusSlides(1)">&#10095;</a>
