--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="header_img"> </div>
     <div class="wedding_description">
       <p>
-        내 전부를 주어도<br> 아깝지 않은 사람을 만나<br>
+        내 전부를 주어도<br> 
+        아깝지 않은 사람을 만나<br>
         믿음과 사랑으로 하나되어<br>
         삶의 여행을 함께 떠나려 합니다.<br>
         저희 여행의 출발점에 여러분을 초대하오니<br>
