--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
             <dt>주차</dt>
             <dd>발렛주차 - 주차요원의 안내를 받으세요</dd>
             <dd>2시간 무료(교통이 혼잡하오니 가급적 대중교통을 이용하시기 바랍니다)</dd>
+            <dt>기타사항</dt>
+            <dd>축하 화환은 정중히 사양합니다.</dd>
           </dl>
         </div>
       </article>
